<resources>
    <!--Fillter-->
    <string name="app_name">MySchool</string>
    <string name="username.vn">Địa chỉ Email</string>
    <string name="password.vn">Mật khẩu</string>
    <string name="fullname.vn">Họ và tên</string>
    <string name="address.vn">Địa chỉ</string>
    <string name="phonenumber.vn">Số điện thoại</string>
    <string name="birthday.vn">Ngày sinh</string>
    <string name="frmInfo">Thông tin</string>
    <string name="frmAction">Hoạt động</string>
    <string name="btnRegister">Đăng ký</string>
    <string name="updateInfor">Vui lòng cập nhật thông tin</string>
    <string name="btnUpdate">Cập nhật</string>
    <string name="btnUpAvatar">Cập nhật avatar</string>
    <string name="validation">Nhập đúng định dạng</string>
    <string name="btnTempNotifi">Tạo tin mẫu</string>
    <string name="btnSendNotifi">Gửi thông báo</string>
    <string name="txtContenttNotifi">Nội dung thông báo</string>
    <string name="txtGroupNotifi">Nhóm nhận thông báo</string>
    <string name="txtJob">Công việc của người dùng:</string>
    <string name="txtGroupJob">Người dùng thuộc tổ công tác:</string>
    <string name="txtGroupPermisstion">Là:</string>
    <string name="txttitletNotifi">Tiêu đề thông báo</string>
    <string name="do.delete">Bạn có muốn xóa </string>
    <string name="titleListNotification">Mẫu thông báo:</string>
    <string name="combackDisplay">Trở về màn hình chính</string>

    <!--Fillter END-->
    <string name="Open">NavBar</string>
    <string name="Close">NavBar</string>

    <string name="title_activity_register">RegisterActivity</string>
    <string name="validation.null">Bạn không được để trống!</string>
    <string name="validation.address">Từ 6 kí tự trở lên không có kí tự đặc biệt!</string>
    <string name="validation.fullname">Tên từ 6-15 kí tự không có số!</string>
    <string name="validation.email">Địa chỉ E-Mail không chính xác!</string>
    <string name="validation.number">Bạn phải nhập trên 6 ký tự!</string>
    <string name="validation.phone">Đây có phải là số điện thoại của bạn?</string>
    <string name="validation.titleNotification">Nội dung tiêu đề của bạn phải trên 6 ký tự!</string>
    <string name="validation.contentNotification">Nội dung của bạn phải trên 6 ký tự!</string>

    <string-array name="select.permission">
        <item>Công việc..</item>
        <item>Giáo viên</item>
        <item>Nhân viên</item>
        <item>Admin</item>
        <item>Kế toán</item>
    </string-array>
    <string-array name="select.notification.to.send">
        <item>Tất cả</item>
        <item>Giáo viên</item>
        <item>Nhân viên</item>
        <item>Admin</item>
        <item>Kế toán</item>
    </string-array>
    <string-array name="select.permission.teacher">
        <item>Tổ công tác..</item>
        <item>Tổ Toán</item>
        <item>Tổ Lý</item>
        <item>Tổ Hóa</item>
    </string-array>
    <string-array name="select.permission.teacher.leader">
        <item>Nhân viên</item>
        <item>Tổ trưởng</item>
        <item>Tổ phó</item>
    </string-array>

    <!--Thông báo Toast-->
    <string name="created.success">Bạn đã tạo tài khoản thành công!</string>
    <string name="title_activity_teacher">TeacherActivity</string>
    <string name="coefficient_profile">Hệ số lương là </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="usernameLogInError">email không hợp lệ</string>
    <string name="PasswordLogInError">mật khẩu cần nhiều hơn 6 kí tự</string>
    <string name="registerCompleted">Tạo tài khoản thành công</string>

    <!--NavBar-->
    <string name="nav.infor">Thông tin cá nhân</string>
    <string name="nav.working">Quản lý công việc</string>
    <string name="nav.search">Tra cứu công văn</string>
    <string name="nav.logout">Đăng xuất</string>
    <!--Option-->
    <string name="dialogAsk.yes">Đồng ý</string>
    <string name="dialogAsk.no">Hủy bỏ</string>
    <string name="menu.search">Tìm kiếm...</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
</resources>
